--- a/messages_data_as_json_steps.ipynb
+++ b/messages_data_as_json_steps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,6 +451,55 @@
    "outputs": [],
    "source": [
     "json.dump(a,open('110.json', 'w'), ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "convs = get_all_convs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'conversation': {'peer': {'id': 198836237,\n",
+       "   'type': 'user',\n",
+       "   'local_id': 198836237},\n",
+       "  'in_read': 284268,\n",
+       "  'out_read': 284268,\n",
+       "  'last_message_id': 284268,\n",
+       "  'can_write': {'allowed': True}},\n",
+       " 'last_message': {'date': 1545314729,\n",
+       "  'from_id': 198836237,\n",
+       "  'id': 284268,\n",
+       "  'out': 0,\n",
+       "  'peer_id': 198836237,\n",
+       "  'text': 'Костюм пусть дают) без вариантов.Дети ждут Деда Мороза Никиту)))',\n",
+       "  'conversation_message_id': 3,\n",
+       "  'fwd_messages': [],\n",
+       "  'important': False,\n",
+       "  'random_id': 0,\n",
+       "  'attachments': [],\n",
+       "  'is_hidden': False}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convs[0]"
    ]
   },
   {
