inctemental download support

--- a/messages_data_as_json_steps.ipynb
+++ b/messages_data_as_json_steps.ipynb
@@ -466,40 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'conversation': {'peer': {'id': 198836237,\n",
-       "   'type': 'user',\n",
-       "   'local_id': 198836237},\n",
-       "  'in_read': 284268,\n",
-       "  'out_read': 284268,\n",
-       "  'last_message_id': 284268,\n",
-       "  'can_write': {'allowed': True}},\n",
-       " 'last_message': {'date': 1545314729,\n",
-       "  'from_id': 198836237,\n",
-       "  'id': 284268,\n",
-       "  'out': 0,\n",
-       "  'peer_id': 198836237,\n",
-       "  'text': 'Костюм пусть дают) без вариантов.Дети ждут Деда Мороза Никиту)))',\n",
-       "  'conversation_message_id': 3,\n",
-       "  'fwd_messages': [],\n",
-       "  'important': False,\n",
-       "  'random_id': 0,\n",
-       "  'attachments': [],\n",
-       "  'is_hidden': False}}"
+       "284268"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "convs[0]"
+    "convs[0]['conversation']['last_message_id']"
    ]
   },
   {
