attachments downloas added ignoring failed tasks

--- a/attachments_saver_steps.ipynb
+++ b/attachments_saver_steps.ipynb
@@ -37,16 +37,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_photo_task(photo_at):\n",
-    "    ph = photo_at['photo']['sizes'][-1]\n",
-    "    url = ph['url']\n",
-    "    size = int(ph['width'] * ph['height'] * IMG_SIZE_COEF/ BYTE_IN_MB)\n",
-    "    return(DTask(url, 'photo', None, size))\n",
     "\n",
-    "def make_audio_task(audio_at):\n",
-    "    url= audio_at['audio']['url'].split('?')[0]\n",
-    "    size= int(audio_at['audio']['duration'] * AUDIO_SIZE_COEF/BYTE_IN_MB)\n",
-    "    return(DTask(url, 'audio', None, size))\n"
+    " def make_photo_task(photo_at):\n",
+    "        ph = photo_at['photo']['sizes'][-1]\n",
+    "        url = ph['url']\n",
+    "        size = int(ph['width'] * ph['height'] * IMG_SIZE_COEF / BYTE_IN_MB)\n",
+    "        return (DTask(url, 'photo', None, size))\n",
+    "\n",
+    "    def make_audio_task(audio_at):\n",
+    "        url = audio_at['audio']['url'].split('?')[0]\n",
+    "        size = int(audio_at['audio']['duration'] * AUDIO_SIZE_COEF / BYTE_IN_MB)\n",
+    "        return (DTask(url, 'audio', None, size))\n"
    ]
   },
   {
