audio saver woks to save audio

--- a/stats_collection.ipynb
+++ b/stats_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2308e6820e774cc79e04eb47a38d5797",
+       "model_id": "cd3a3167776648eb87a338b0a41e5631",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=810), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=817), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "'поехать'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,18 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b7e9128ddbb44c5bb28cd400d0143b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=65367), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=66180), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -123,30 +118,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'date': 1543769598,\n",
+       "{'date': 1545251624,\n",
        " 'from_id': 21854966,\n",
-       " 'id': 282401,\n",
+       " 'id': 283961,\n",
        " 'out': 1,\n",
        " 'peer_id': 9468306,\n",
-       " 'text': 'Еще одно \"русское научное зарубежье\"',\n",
-       " 'conversation_message_id': 5989,\n",
+       " 'text': 'Еще есть вопрос про хату в лагере. \\nЕсли ехать туда на нг, сколько народу там реально полжить спать и в каких условиях ?\\nГриша говорит ты шаришь лучше всех.',\n",
+       " 'conversation_message_id': 6451,\n",
        " 'fwd_messages': [],\n",
        " 'important': False,\n",
-       " 'random_id': 1150034850,\n",
+       " 'random_id': 1716296581,\n",
        " 'attachments': [],\n",
-       " 'is_hidden': False,\n",
-       " 'lemmatize': ['ещё', 'один', 'русский', 'научный', 'зарубежье'],\n",
-       " 'len': 5,\n",
-       " 'is_q': False}"
+       " 'is_hidden': False}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,21 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65367 total messages\n",
-      "569272 total words:\n",
-      "11310 questions\n",
-      "unique words: 26316\n",
-      "twice used words 12892\n",
-      "3-times used words 9188\n",
-      "4-times used words 7304\n",
-      "5-times used words 6162\n"
+      "66180 total messages\n",
+      "575197 total words:\n",
+      "11482 questions\n",
+      "unique words: 26450\n",
+      "twice used words 12955\n",
+      "3-times used words 9246\n",
+      "4-times used words 7351\n",
+      "5-times used words 6204\n"
      ]
     }
    ],
@@ -239,26 +233,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=817), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "convs = []\n",
     "\n",
-    "files_list=glob.glob(os.path.join(DUMP_DIR, '*/*.json'))\n",
+    "files_list=glob.glob(os.path.join('dumps/nikkorobk', '*/*.json'))\n",
     "for file in tqdm.tqdm_notebook(files_list):\n",
     "    data = json.load(open(file))\n",
     "    d = {}\n",
     "    d['chat'] = 0 < data.get('conversations')[0].get('peer').get('id') < 2000000000\n",
     "    d['len'] = data['count']\n",
-    "    d['profiles'] = list(filter(lambda x: x.get('screen_name') != 'nikkorobk', data['profiles']))\n",
+    "    d['in'] = len(list(filter(lambda x: not x['out'], data['items'])))\n",
+    "    d['profiles'] = list((filter(lambda x: x.get('screen_name') != 'nikkorobk', data['profiles'])))\n",
     "    d['id'] = int(file.split('/')[-2])\n",
     "    convs.append(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,16 +288,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'convs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-7ecbda9ccdce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdialogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'chat'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvs\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdialogs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'len'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdialogs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'convs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dialogs = list(filter(lambda x:  x.get('chat'), convs ))\n",
     "dialogs.sort(key=lambda x: -x.get('len'))\n",
     "\n",
     "for d in dialogs:\n",
-    "    g = list(filter(lambda x: x['id'] == d['id'], d['profiles']))[0]\n",
-    "    print(d['len'], g['first_name'], g['last_name'], len(d['profiles']))"
+    "    try:\n",
+    "        g = list(filter(lambda x: x['id'] == d['id'], d['profiles']))[0]\n",
+    "    except IndexError as e:\n",
+    "        g = {'first_name': 'me','last_name':'me'}\n",
+    "    print(d['len'], d['in'], g['first_name'], g['last_name'])"
    ]
   },
   {
